--- a/core/branches/0.3.x.x/OptimusMini/OptimusMini.csproj
+++ b/core/branches/0.3.x.x/OptimusMini/OptimusMini.csproj
@@ -36,21 +36,28 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OptimusMiniPluginBase.cs" />
+    <Compile Include="Configuration\ConfigurationController.cs" />
+    <Compile Include="Configuration\ConfigurationManager.cs" />
+    <Compile Include="Configuration\ConfigurationSection.cs" />
+    <Compile Include="Configuration\ConfigurationLayout.cs" />
+    <Compile Include="OptimusMiniEventLogType.cs" />
+    <Compile Include="Plugins\OptimusMiniPluginBase.cs" />
     <Compile Include="OptimusMiniBrightness.cs" />
     <Compile Include="OptimusMiniConnection.cs" />
     <Compile Include="OptimusMiniController.cs" />
     <Compile Include="OptimusMiniKeyState.cs" />
-    <Compile Include="OptimusMiniLayout.cs" />
-    <Compile Include="OptimusMiniPluginWorkerBase.cs" />
-    <Compile Include="OptimusMiniPluginBrowser.cs" />
+    <Compile Include="OptimusMiniOrientation.cs" />
+    <Compile Include="Plugins\OptimusMiniPluginWorkerBase.cs" />
+    <Compile Include="Plugins\OptimusMiniPluginBrowser.cs" />
     <Compile Include="OptimusMiniSettings.cs" />
+    <Compile Include="Plugins\OptimusMiniPluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -71,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\calibrate.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Configuration\configexample.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Settings\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
