--- a/core/branches/0.3.x.x/OptimusUI/OptimusUI.csproj
+++ b/core/branches/0.3.x.x/OptimusUI/OptimusUI.csproj
@@ -8,9 +8,9 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OptimusUI</RootNamespace>
-    <AssemblyName>OptimusUI</AssemblyName>
-    <ApplicationIcon>
-    </ApplicationIcon>
+    <AssemblyName>om3controller</AssemblyName>
+    <ApplicationIcon>app.ico</ApplicationIcon>
+    <StartupObject>OptimusUI.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,11 +45,71 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\EventLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EventLog.Designer.cs">
+      <DependentUpon>EventLog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Settings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Settings.Designer.cs">
+      <DependentUpon>Settings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Main.Designer.cs">
+      <DependentUpon>Main.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PluginManagerControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\PluginManagerControl.Designer.cs">
+      <DependentUpon>PluginManagerControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Start.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Start.Designer.cs">
+      <DependentUpon>Start.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <SubType>Designer</SubType>
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EventLog.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>EventLog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PluginManagerControl.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>PluginManagerControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Settings.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>Settings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Main.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>Main.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Start.resx">
+      <SubType>Designer</SubType>
+      <DependentUpon>Start.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <SubType>Designer</SubType>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +117,38 @@
       <Project>{022601F1-D298-4CAF-8442-BD176F73019D}</Project>
       <Name>OptimusMini</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\application.png" />
+    <None Include="Resources\arrow_rotate_clockwise.png" />
+    <None Include="Resources\arrow_out.png" />
+    <Content Include="app.ico" />
+    <None Include="Resources\arrow_down.png" />
+    <None Include="Resources\arrow_up.png" />
+    <Content Include="Resources\cog.png" />
+    <Content Include="Resources\connect.png" />
+    <None Include="Resources\contrast.png" />
+    <Content Include="Resources\disconnect.png" />
+    <None Include="Resources\hourglass.png" />
+    <None Include="Resources\help.png" />
+    <None Include="Resources\headerlogo.gif" />
+    <None Include="Resources\headerbackground.gif" />
+    <None Include="Resources\warning.png" />
+    <None Include="Resources\error.png" />
+    <None Include="Resources\door_open.png" />
+    <None Include="Resources\information.png" />
+    <Content Include="Resources\layout.png" />
+    <None Include="Resources\palette.png" />
+    <None Include="Resources\page_white_lightning.png" />
+    <None Include="Resources\page_white_word.png" />
+    <None Include="Resources\page_white_world.png" />
+    <Content Include="Resources\plugin.png" />
+    <None Include="Resources\plugin_go.png" />
+    <Content Include="Resources\plugin_link.png" />
+    <None Include="Resources\plugin_link_break.png" />
+    <None Include="Resources\plugin_delete.png" />
+    <None Include="Resources\plugin_add.png" />
+    <None Include="Resources\plugin_edit.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
